--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
+    "allowJs": true,
+    "noImplicitAny": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
