--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,11 @@
       "config": { "includeFiles": ["dist/**"] }
     }
   ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "dist/index.js"
+    }
+  ],
   "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
